src/test/deca/context/invalid/inst_return_in_void_method_float.deca
// Test of the rule (3.24): not possible to return something
// when we are not expecting a return

class A  {
    void voidMethod(){
        return 3.14;
    }
}



// Resultat:

//# TODO message error
